# python-betterproto2

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: release.yml
.github/workflows/: ci.yml  code-quality.yml  documentation.yml  release.yml
api/: index.html
betterproto2/: pyproject.toml
betterproto2/docs/: descriptors.md  getting-started.md  index.md
betterproto2/src/betterproto2/: __init__.py  enum_.py  nano_datetime.py
betterproto2/src/betterproto2/grpclib/: grpclib_client.py
betterproto2/tests/: README.md  oneof_pattern_matching.py  test_any.py  test_deprecated.py  test_documentation.py  test_duration.py  test_inputs.py  test_nano_datetime.py  test_pickling.py  test_struct.py  test_sync_client.py  test_timestamp.py  util.py
betterproto2/tests/conformance/: main.py
betterproto2/tests/grpc/: test_grpclib_client.py  test_grpclib_reflection.py  test_message_enum_descriptors.py  test_service_stub_attributes.py
betterproto2/tests/inputs/enum/: test_enum.py
betterproto2/tests/inputs/example_service/: test_example_service.py
betterproto2/tests/inputs/google_impl_behavior_equivalence/: test_google_impl_behavior_equivalence.py
betterproto2/tests/inputs/googletypes_response/: test_googletypes_response.py
betterproto2_compiler/: pyproject.toml
betterproto2_compiler/src/betterproto2_compiler/compile/: importing.py
betterproto2_compiler/src/betterproto2_compiler/known_types/: __init__.py  any.py  duration.py  google_values.py  struct.py  timestamp.py
betterproto2_compiler/src/betterproto2_compiler/lib/: __init__.py
betterproto2_compiler/src/betterproto2_compiler/lib/google/protobuf/: __init__.py
betterproto2_compiler/src/betterproto2_compiler/plugin/: models.py  parser.py
betterproto2_compiler/src/betterproto2_compiler/templates/: header.py.j2  template.py.j2
betterproto2_compiler/tests/: generate.py  test_known_type_imports.py  util.py
betterproto2_compiler/tests/inputs/conformance/: conformance.proto
betterproto2_compiler/tests/inputs/example/: example.proto
descriptors/: index.html
development/: index.html
docs/: index.md
docs/tutorial/: messages.md
getting-started/: index.html
migrating/: index.html
quick-start/: index.html
search/: search_index.json
src/betterproto/: __init__.py  casing.py  enum.py  utils.py
src/betterproto/compile/: importing.py
src/betterproto/grpc/: grpclib_client.py
src/betterproto/grpc/util/: async_channel.py
src/betterproto/lib/pydantic/google/protobuf/: __init__.py
src/betterproto/lib/pydantic/google/protobuf/compiler/: __init__.py
src/betterproto/lib/std/google/protobuf/: __init__.py
src/betterproto/plugin/: compiler.py  models.py  parser.py
src/betterproto/templates/: header.py.j2  template.py.j2
src/betterproto2/: __init__.py  custom_list.py  enum.py  message_pool.py  utils.py
src/betterproto2/internal_lib/google/protobuf/: __init__.py
src/betterproto2/lib/pydantic/google/protobuf/: __init__.py
src/betterproto2/lib/std/google/protobuf/: __init__.py
src/betterproto2/validators/: __init__.py  proto_types.py
tests/: generate.py  test_any.py  test_enum.py  test_features.py  test_inputs.py  test_pickling.py  test_streams.py  test_sync_client.py  test_timestamp.py  test_typing_compiler.py  test_validation.py  test_validators_proto_types.py  util.py
tests/inputs/enum/: test_enum.py
tests/inputs/example_service/: test_example_service.py
tests/inputs/google_impl_behavior_equivalence/: test_google_impl_behavior_equivalence.py
tests/inputs/oneof_default_value_serialization/: test_oneof_default_value_serialization.py
tests/inputs/timestamp_dict_encode/: test_timestamp_dict_encode.py
tutorial/clients/: index.html
tutorial/messages/: index.html
