[project]
name = "betterproto2"
version = "0.9.0"
description = "A better Protobuf / gRPC generator & library"
authors = [
    {name = "Adrien Vannson", email = "adrien.vannson@protonmail.com"},
    {name = "Daniel G. Taylor", email = "danielgtaylor@gmail.com"}
]
keywords = ["protobuf", "gRPC"]
license = "MIT"
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "typing-extensions>=4.14.0",
]

[project.urls]
Documentation = "https://betterproto.github.io/python-betterproto2/"
Repository = "https://github.com/betterproto/python-betterproto2"

[project.optional-dependencies]
grpcio = ["grpcio>=1.72.1"]
grpclib = ["grpclib>=0.4.8"]
pydantic = ["pydantic>=2.11.5"]
protobuf = ["protobuf>=5.29.3"]
all = ["grpclib>=0.4.8", "grpcio>=1.72.1", "pydantic>=2.11.5", "protobuf>=5.29.3"]

[tool.uv]
package = true
default-groups = "all"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

# Package-specific Ruff configuration (inherits from workspace)
[tool.ruff]
extend-exclude = ["tests/outputs", "src/betterproto2/internal_lib"]

# Package-specific pytest configuration
[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = ""
norecursedirs = "**/output_*"
addopts = "-p no:warnings"

# Package-specific tasks
[tool.poe.tasks.get-local-compiled-tests]
# task useful for local development. Copies the compiled test files from the compiler folder to the tests folder
shell = "rm -rf tests/outputs* && cp -r ../betterproto2_compiler/tests/outputs tests"