[project]
name = "betterproto2_compiler"
version = "0.9.0"
description = "Compiler for betterproto2"
authors = [
    { name = "Adrien Vannson", email = "adrien.vannson@protonmail.com" },
    { name = "Daniel G. Taylor", email = "danielgtaylor@gmail.com" },
]
license = "MIT"
keywords = [
    "protobuf",
    "gRPC",
    "compiler",
]
requires-python = ">=3.10,<4.0"
dependencies = [
    # TODO use the version from the current repo?
    "betterproto2>=0.9.0,<0.10",
    # "betterproto2",
    "ruff~=0.9.3",
    "jinja2>=3.0.3",
    "typing-extensions>=4.7.1,<5",
    "strenum>=0.4.15,<0.5 ; python_version == '3.10'",
]

[project.urls]
Documentation = "https://betterproto.github.io/python-betterproto2/"
Repository = "https://github.com/betterproto/python-betterproto2"

[project.scripts]
protoc-gen-python_betterproto2 = "betterproto2_compiler.plugin:main"

[tool.uv]
package = true
default-groups = "all"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

# Package-specific Ruff configuration (inherits from workspace)
[tool.ruff]
extend-exclude = ["tests/outputs", "src/betterproto2_compiler/lib"]

# Package-specific pytest configuration
[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = ""
norecursedirs = "**/output_*"
addopts = "-p no:warnings"

# Package-specific tasks
[tool.poe.tasks.generate]
# sequence = ["_generate_tests", "_generate_tests_lib"]
sequence = ["_generate_tests"]
help = "Generate test cases"

[tool.poe.tasks._generate_tests]
script = "tests.generate:main"

[tool.poe.tasks._generate_tests_lib]
shell = """
python -m grpc.tools.protoc \
    --python_betterproto2_out=tests/output_betterproto \
    google/protobuf/any.proto \
    google/protobuf/api.proto \
    google/protobuf/duration.proto \
    google/protobuf/empty.proto \
    google/protobuf/field_mask.proto \
    google/protobuf/source_context.proto \
    google/protobuf/struct.proto \
    google/protobuf/timestamp.proto \
    google/protobuf/type.proto \
    google/protobuf/wrappers.proto

python -m grpc.tools.protoc \
    --python_betterproto2_out=tests/output_betterproto_pydantic \
    --python_betterproto2_opt=pydantic_dataclasses \
    google/protobuf/any.proto \
    google/protobuf/api.proto \
    google/protobuf/duration.proto \
    google/protobuf/empty.proto \
    google/protobuf/field_mask.proto \
    google/protobuf/source_context.proto \
    google/protobuf/struct.proto \
    google/protobuf/timestamp.proto \
    google/protobuf/type.proto \
    google/protobuf/wrappers.proto

python -m grpc.tools.protoc \
    --python_betterproto2_out=tests/output_betterproto_descriptor \
    --python_betterproto2_opt=google_protobuf_descriptors \
    google/protobuf/any.proto \
    google/protobuf/api.proto \
    google/protobuf/duration.proto \
    google/protobuf/empty.proto \
    google/protobuf/field_mask.proto \
    google/protobuf/source_context.proto \
    google/protobuf/struct.proto \
    google/protobuf/timestamp.proto \
    google/protobuf/type.proto \
    google/protobuf/wrappers.proto
"""